[gd_scene load_steps=13 format=3 uid="uid://uf34ufn87ga5"]

[ext_resource type="Script" path="res://Scenes/Battle/Enemy.gd" id="1_ka4xh"]
[ext_resource type="Texture2D" uid="uid://crxym1ef2qeu1" path="res://Assets/Sprites/Battle/enemy_ui.png" id="2_wkeyc"]
[ext_resource type="FontFile" uid="uid://dumivhttkti0d" path="res://Assets/Fonts/PKMN RBYGSC.ttf" id="3_j5p75"]
[ext_resource type="Texture2D" uid="uid://bt20v461dbbw6" path="res://Assets/Sprites/Battle/under.png" id="4_in2xp"]
[ext_resource type="Texture2D" uid="uid://dnykljxe3ujns" path="res://Assets/Sprites/Battle/fill.png" id="5_70yyu"]
[ext_resource type="Texture2D" uid="uid://b563wmhvvobny" path="res://Assets/Sprites/npcs/rattata.png" id="7_y81tw"]

[sub_resource type="FontVariation" id="FontVariation_maqdu"]
base_font = ExtResource("3_j5p75")
spacing_glyph = -2

[sub_resource type="FontVariation" id="FontVariation_shr27"]
base_font = ExtResource("3_j5p75")
spacing_glyph = 1

[sub_resource type="Animation" id="Animation_5ugbh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 72), Vector2(160, 72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_72i05"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(160, 72), Vector2(168, 64), Vector2(152, 96), Vector2(160, 72)]
}

[sub_resource type="Animation" id="Animation_0tagi"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exm8s"]
_data = {
"RESET": SubResource("Animation_5ugbh"),
"attack": SubResource("Animation_72i05"),
"hit": SubResource("Animation_0tagi")
}

[node name="Enemy" type="Node2D"]
position = Vector2(192, 16)
script = ExtResource("1_ka4xh")
metadata/_edit_lock_ = true

[node name="EnemyUI" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-80, 24)
scale = Vector2(2, 2)
texture = ExtResource("2_wkeyc")

[node name="EnemyName" type="Label" parent="."]
texture_filter = 1
offset_left = -166.0
offset_top = 2.0
offset_right = -50.0
offset_bottom = 26.0
scale = Vector2(0.7, 1)
theme_override_colors/font_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_colors/font_shadow_color = Color(0.847059, 0.815686, 0.690196, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("FontVariation_maqdu")
theme_override_font_sizes/font_size = 18
text = "ü•Åü•Åü•Åü•Åü•Åü•Åü•Åü•Å"

[node name="EnemyLv" type="Label" parent="."]
texture_filter = 1
offset_left = -18.0
offset_right = 3.0
offset_bottom = 22.0
scale = Vector2(0.5, 1)
theme_override_colors/font_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_colors/font_shadow_color = Color(0.847059, 0.815686, 0.690196, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("FontVariation_shr27")
theme_override_font_sizes/font_size = 19
text = "ü•Å"

[node name="EnemyHPBar" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = -106.0
offset_top = 25.0
offset_right = -54.0
offset_bottom = 32.0
scale = Vector2(2, 2)
max_value = 25.0
value = 25.0
texture_under = ExtResource("4_in2xp")
texture_progress = ExtResource("5_70yyu")
texture_progress_offset = Vector2(2, 2)

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160, 72)
scale = Vector2(3, 3)
texture = ExtResource("7_y81tw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_exm8s")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
